--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 anyio==4.4.0
 asgiref==3.8.1
 async-timeout==4.0.3
+attrs==24.2.0
+autobahn==23.1.2
+Automat==24.8.1
 backports.zoneinfo==0.2.1
 certifi==2024.8.30
 cffi==1.17.1
@@ -8,7 +11,9 @@ channels==4.1.0
 channels-redis==4.2.0
 charset-normalizer==3.3.2
 click==8.1.7
+constantly==23.10.4
 cryptography==43.0.1
+daphne==4.1.2
 Django==4.2.16
 django-cors-headers==4.4.0
 django-extensions==3.2.3
@@ -17,12 +22,16 @@ djangorestframework-simplejwt==5.3.1
 exceptiongroup==1.2.2
 h11==0.14.0
 httptools==0.6.1
+hyperlink==21.0.0
 idna==3.10
+incremental==24.7.2
 joblib==1.4.2
 MarkupSafe==2.1.5
 msgpack==1.1.0
 numpy==1.24.4
 pandas==2.0.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 PyJWT==2.9.0
 pyOpenSSL==24.2.1
@@ -35,10 +44,14 @@ requests==2.32.3
 scikit-learn==1.3.2
 scikit-surprise==1.1.4
 scipy==1.10.1
+service-identity==24.1.0
 six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.1
 threadpoolctl==3.5.0
+tomli==2.0.1
+Twisted==24.7.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.3
@@ -48,3 +61,4 @@ watchfiles==0.24.0
 websockets==13.0.1
 Werkzeug==3.0.4
 wsproto==1.2.0
+zope.interface==7.0.3
